--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,5 @@ APP_HOST=0.0.0.0
 APP_PORT=8000
 LOG_LEVEL=INFO
 EMBEDDING_DIM=1536
+IVFFLAT_PROBES=100
 DATABASE_URL=postgresql+asyncpg://raggy:raggy@db:5432/raggy
