Add milestone 4 guardrail tests

--- a/.env.example
+++ b/.env.example
@@ -5,4 +5,7 @@ APP_PORT=8000
 LOG_LEVEL=INFO
 EMBEDDING_DIM=1536
 IVFFLAT_PROBES=100
+MAX_REQUEST_BYTES=200000
+RATE_LIMIT_REQUESTS=120
+RATE_LIMIT_WINDOW_SECONDS=60
 DATABASE_URL=postgresql+asyncpg://raggy:raggy@db:5432/raggy
