Update docs and logster integration

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ dependencies = [
   "pydantic>=2.8.2",
   "pydantic-settings>=2.4.0",
   "structlog>=24.4.0",
-  "logster",
+  "logster>=0.1.2",
 ]
 
 [project.optional-dependencies]
@@ -60,4 +60,4 @@ module = ["pgvector", "pgvector.sqlalchemy", "pgvector.*"]
 ignore_missing_imports = true
 
 [tool.uv.sources]
-logster = { git = "https://github.com/mitiak/logster.git" }
+logster = { git = "https://github.com/mitiak/logster.git", rev = "v0.1.2" }
