--- a/logster.toml
+++ b/logster.toml
@@ -4,15 +4,15 @@
 no_color = false
 output_style = "verbose"  # compact | verbose
 theme = "monokai-github-meta"  # preset theme name
-metadata_color = "green"
-time_color = "green"
-level_color = "green"
-file_color = "green"
-origin_color = "green"
-message_color = "bright_yellow"
-verbose_metadata_key_color = "green"
-verbose_metadata_value_color = "bright_yellow"
-verbose_metadata_punctuation_color = "green"
+#metadata_color = "green"
+#time_color = "green"
+#level_color = "green"
+#file_color = "green"
+#origin_color = "green"
+#message_color = "bright_yellow"
+#verbose_metadata_key_color = "green"
+#verbose_metadata_value_color = "bright_yellow"
+#verbose_metadata_punctuation_color = "green"
 
 [fields]
 timestamp = "timestamp"
